fix(frontend): Add box shadow to widget in collapsed state

--- a/frontend/src/features/widget/widget-main.scss
+++ b/frontend/src/features/widget/widget-main.scss
@@ -4,6 +4,7 @@
   height: 100%;
   transition: box-shadow 0.5s ease;
   overflow: hidden;
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.20);
 
   &.widget-opened {
     padding-top: 20px;
@@ -11,6 +12,9 @@
     align-items: center;
     flex-direction: column;
     border-radius: $widget-border-radius $widget-border-radius 0 0;
-    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.20);
+  }
+
+  &.loading {
+    box-shadow: none;
   }
 }
